# bevy_sim

./: .gitignore  Cargo.toml  ideas.md  plan.md
.github/workflows/: build.yml
assets/: 2_tree.glb  Untitled.blend  dead_tree.glb  oak.glb  pine tree.blend  pine tree.gltf  pine.glb  snowy_pine.glb  tree.blend  tree.gltf
assets/f16_low_poly/: license.txt  scene.gltf
assets/low_poly_cessna/: license.txt  scene.gltf
flight_sim_server/: Cargo.toml
flight_sim_server/src/: main.rs  protocol.rs
src/: consts.rs  controls.rs  day_cycle.rs  environment.rs  hud.rs  main.rs  network.rs  world_generation.rs
