[package]
name = "bevy_sim"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {version = "0.18.0", features = ["bevy_dev_tools"]}
futures-lite = "2.6.1"
noise = "0.9.0"

bevy_egui = "0.39.1" # Check for the version matching your Bevy version
bevy_water = "0.18.1"
rayon = "1.11.0"
rand = "0.10.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1